<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Payment method  -->
    <string name="payment_method_title">Choose a payment method to continue</string>
    <string name="credit_card">Credit Card</string>
    <string name="crypto">Crypto</string>
    <string name="myst">MYST</string>
    <string name="polygon">MYST(Polygon)</string>
    <string name="ethereum">MYST(Ethereum)</string>
    <string name="paypal">Paypal</string>
    <string name="stripe">Stripe</string>

    <!--  Crypto payment  -->
    <string name="top_up_payment_title">Waiting for a payment</string>
    <string name="top_up_your_account">Top up your account</string>
    <string name="top_up_polygon_only_warning">Only Polygon Myst is supported.\nDo not send Ethereum MYST!</string>
    <string name="top_up_payment_crypto_description">Scan this QR code which contains your top-up address</string>
    <string name="top_up_payment_myst_polygon_description">Deposit Polygon MYST directly to your Payment channel. Scan QR code or copy address to proceed.</string>
    <string name="top_up_payment_balance_refreshing">Balance is being refreshed automatically while this screen is open</string>
    <string name="top_up_payment_link">Or use a payment link</string>
    <string name="top_up_usd_equivalent">USD equivalent ≈ $%.2f</string>
    <string name="top_up_payment_back_to_home_screen">Back to Home Screen</string>
    <string name="top_up_payment_myst_description">%.8f MYST</string>
    <string name="top_up_payment_myst_received">received!</string>

    <!-- Select country -->
    <string name="card_currency_title">Currency &amp; Country</string>
    <string name="card_currency_description">Select your country for the VAT calculation</string>
    <string name="card_payment_country_hint">Select Country or Region</string>
    <string name="card_payment_state_hint">Select State</string>

    <!--  Pop up  -->
    <string name="pop_up_payment_canceled_title">Payment\n Canceled</string>
    <string name="pop_up_payment_canceled_description">You canceled the\n payment process</string>

    <string name="pop_up_payment_button">Continue</string>
    <string name="pop_up_payment_title_warning">Warning!</string>
    <string name="pop_up_payment_description">It may take some time to process your payment after this step.\n \n You\'ll receive a notification once your payment is successfully processed.</string>

    <string name="pop_up_payment_successfully_title">Payment\n Successful</string>
    <string name="pop_up_payment_successfully_done">Well done</string>
    <string name="pop_up_payment_successfully_close">To home screen</string>

    <string name="pop_up_payment_not_work_title">Payment Server\n Doesn\'t Work</string>
    <string name="pop_up_payment_not_work_try_again">Please try again later</string>
    <string name="pop_up_payment_not_work_okay">Okay, got it</string>

    <string name="pop_up_payment_expired_title">Payment is not\n Successful</string>
    <string name="pop_up_payment_expired_description">Time is over</string>
    <string name="pop_up_payment_expired_try_again">Try again</string>Top up later
    <string name="pop_up_payment_expired_later">Top up later</string>

    <string name="pop_up_crypto_payment_title">Warning!</string>
    <string name="pop_up_crypto_payment_description">It may take some time to process your payment after this step.\n \n You\'ll receive a notification once your payment is successfully processed.</string>
    <string name="pop_up_crypto_payment_button">Continue</string>

</resources>
