<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/Widget.SemiTransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_medium_large"
        android:layout_marginTop="@dimen/margin_padding_size_large"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.HeadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_up_payment_title"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <updated.mysterium.vpn.ui.custom.view.CountdownTimerView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_small_medium"
        android:layoutDirection="ltr"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <FrameLayout
        android:id="@+id/currencyEquivalentFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_small_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:background="@drawable/shape_currency_equivalent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer">

        <TextView
            android:id="@+id/currencyEquivalentTextView"
            style="@style/TextAppearance.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_padding_size_small_plus"
            android:layout_marginBottom="@dimen/margin_padding_size_xxsmall"
            android:textColor="@android:color/white"
            tools:text="0.000245 BTC" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/qrCodeFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_xsmall"
        android:background="@drawable/shape_qr_frame"
        android:padding="@dimen/margin_padding_size_small_plus"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/topUpDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyEquivalentFrame">

        <ImageView
            android:id="@+id/qrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/qrShadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_qr_shadow"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/qrCodeFrame"
        app:layout_constraintEnd_toEndOf="@+id/qrCodeFrame"
        app:layout_constraintStart_toStartOf="@+id/qrCodeFrame"
        app:layout_constraintTop_toTopOf="@+id/qrCodeFrame"
        tools:ignore="ContentDescription" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_padding_size_large"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/topUpDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loader_animation" />

    <TextView
        android:id="@+id/topUpDescription"
        style="@style/TextAppearance.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small_plus"
        android:gravity="center"
        android:text="@string/top_up_payment_crypto_description"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/polygonOnlyWarningCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/polygonOnlyWarningCardView"
        style="@style/Widget.PrimaryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small_plus"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_padding_size_large"
            android:paddingVertical="@dimen/margin_padding_size_small"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/warningIcon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/icon_pop_up_warning"
                app:tint="@color/crypto_payment_polygon_only_warning_icon_color"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/warningText"
                style="@style/TextAppearance.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:layout_marginStart="@dimen/margin_padding_size_large"
                android:text="@string/top_up_polygon_only_warning"
                android:textColor="@color/manual_connect_divider_grey_blue" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/Widget.PrimaryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small_plus"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/useLinkTextView"
                style="@style/TextAppearance.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:text="@string/top_up_payment_link"
                android:textAlignment="center"
                android:textColor="@color/manual_connect_country_name_dark_blue" />

            <FrameLayout
                android:id="@+id/linkValueContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_small_medium"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:textAlignment="center">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_link_edit_text">

                    <TextView
                        android:id="@+id/linkValueTextView"
                        style="@style/TextAppearance.Caption"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_xxlarge"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/crypto_payment_address_text_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/copyButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="O×9954B7C616176BD20C8BE1DE9616176BD" />

                    <ImageButton
                        android:id="@+id/copyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/shape_button_copy"
                        android:src="@drawable/icon_copy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/usdEquivalentTextView"
                style="@style/TextAppearance.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:text="@string/top_up_usd_equivalent"
                android:textColor="@color/manual_connect_divider_grey_blue"
                android:visibility="gone" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/paymentAnimation"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/payment_loader_animation" />

            <TextView
                android:id="@+id/balanceRefreshingTextView"
                style="@style/TextAppearance.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_large"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:text="@string/top_up_payment_balance_refreshing"
                android:textAlignment="center"
                android:textColor="@color/manual_connect_divider_grey_blue"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/receivedMystFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_large"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/receivedMystValueTextView"
                    style="@style/TextAppearance.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/manual_connect_country_name_dark_blue"
                    tools:text="2.51345654 MYST" />

                <TextView
                    android:id="@+id/receivedMystTitleTextView"
                    style="@style/TextAppearance.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/top_up_payment_myst_received"
                    android:textAlignment="center"
                    android:textColor="@color/manual_connect_country_name_dark_blue" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/closeButton"
                style="@style/Widget.TrialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:text="@string/top_up_payment_back_to_home_screen"
                android:textAlignment="center"
                android:visibility="gone" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <include
        android:id="@+id/paymentBalanceLimitLayout"
        layout="@layout/item_payment_balance_limit_banner"
        app:layout_constraintBottom_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
