<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/Widget.SemiTransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_medium_large"
        android:layout_marginTop="@dimen/margin_padding_size_large"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextAppearance.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_large"
        android:text="@string/create_account_title"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_padding_size_xxlarge"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/prepare_top_up_animation" />

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/TextAppearance.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_small_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        android:text="@string/payment_method_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/Widget.PrimaryCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_padding_size_large"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <LinearLayout
                android:id="@+id/creditCardPayment"
                style="@style/RippleEffectPrimaryColor"
                android:layout_width="138dp"
                android:layout_height="149dp"
                android:layout_marginVertical="@dimen/margin_padding_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_large"
                android:layout_marginEnd="@dimen/margin_padding_size_small"
                android:background="@drawable/shape_rectangle_pink_rounded_10"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:weightSum="2"
                app:layout_constraintBottom_toTopOf="@+id/usdEquivalentTextView"
                app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:layout_weight="1"
                    android:src="@drawable/icon_top_up_now"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/TextAppearance.HeadSubNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/credit_card"
                    android:textAlignment="center"
                    android:textColor="@color/create_account_import_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cryptoPayment"
                style="@style/RippleEffectSecondaryColor"
                android:layout_width="138dp"
                android:layout_height="149dp"
                android:layout_marginVertical="@dimen/margin_padding_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_small"
                android:layout_marginEnd="@dimen/margin_padding_size_large"
                android:background="@drawable/shape_rectangle_gray_rounded_10"
                android:orientation="vertical"
                android:weightSum="2"
                app:layout_constraintBottom_toTopOf="@+id/usdEquivalentTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/centerGuideline"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:layout_weight="1"
                    android:src="@drawable/icon_crypto"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/TextAppearance.HeadSubNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/crypto"
                    android:textAlignment="center"
                    android:textColor="@color/manual_connect_connecting_title_grey_blue" />

            </LinearLayout>

            <TextView
                android:id="@+id/usdEquivalentTextView"
                style="@style/TextAppearance.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_size_biggest"
                android:textColor="@color/manual_connect_divider_grey_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cryptoPayment"
                app:layout_constraintStart_toStartOf="@+id/creditCardPayment"
                tools:text="USD Equivalant = $12.26 " />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
